--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,8 @@ html {
     left: 0;
     top: 70%;
     width: 100%;
-    text-align: center;
+    text-align: left;
+	margin-left:5px;
     color: #000;
 }
 .caption span.border {
