--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,7 @@ html {
     text-align: left;
 	margin-left:5px;
     color: #000;
+    background-image: url("../images/9.png");
 }
 .caption span.border {
     background-color: transparent;
@@ -68,7 +69,7 @@ html {
     padding: 12px;
     font-size: 20px;
     letter-spacing: 3px;
-    border: 1px solid rgba(255, 255, 255, .8);
+    /*border: 1px solid rgba(255, 255, 255, .8);*/
     cursor: pointer;
 }
 h3 {
@@ -97,7 +98,7 @@ h3 {
 }
 .leftMarker {
     position: absolute;
-    border: 1px solid rgba(255, 255, 255, .5);
+    /*border: 1px solid rgba(255, 255, 255, .5);*/
     width: 0px;
     height: 44px;
     top: -5px;
