--- a/css/style.css
+++ b/css/style.css
@@ -57,11 +57,15 @@ html {
     display: block;
     left: 0;
     top: 70%;
-    width: 100%;
+    width: 0%;
     text-align: left;
 	margin-left:5px;
     color: #000;
-    background-image: url("../images/9.png");
+    font-family:  'Bad Script', cursive;
+    -webkit-transition: width 1s ease-in-out;
+    -moz-transition: width 1s ease-in-out;
+    -o-transition: width 1s ease-in-out;
+    transition: width 1s ease-in-out;
 }
 .caption span.border {
     background-color: transparent;
@@ -72,6 +76,21 @@ html {
     /*border: 1px solid rgba(255, 255, 255, .8);*/
     cursor: pointer;
 }
+
+.caption span.border a{
+    color: white;
+}
+
+.about{
+    background-image: url("../images/14.png");    
+}
+.mySkills{
+    background-image: url("../images/15.png");    
+}
+.myExperience{
+    background-image: url("../images/21.png");    
+}
+
 h3 {
     letter-spacing: 5px;
     text-transform: uppercase;
@@ -227,4 +246,13 @@ a{
     .textContent {
         padding: 25px 25px;
     }
+}
+
+
+
+
+.fixed {
+    top:0;
+    left:0;
+    position:fixed;        
 }
