--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ html {
     margin: 0;
     font: 400 15px/1.8 "Lato", sans-serif;
     color: #777;
-    min-width: 365px;
+    min-width: 410px;
     font-family: 'David Libre', serif !important;
     background: -moz-linear-gradient(215deg, rgba(59, 68, 77, 1) 0%, rgba(59, 68, 77, 1) 2%, rgba(65, 74, 84, 1) 23%, rgba(60, 68, 77, 1) 51%, rgba(41, 47, 54, 1) 89%, rgba(41, 47, 54, 1) 100%);
     /* ff3.6+ */
@@ -155,7 +155,7 @@ h3 {
     background: #E6EAEE;
 }
 .divider {
-    width: 398px;
+    /*width: 398px;*/
     height: 5px;
     /*border: 1px solid rgba(0, 0, 0, 0.2);*/
     margin: 15px;
@@ -260,6 +260,72 @@ a{
     }
 }
 
+@media only screen and (max-width: 815px) {
+	.bgMedium{
+		width:auto;
+     	 
+	}
+	.textContent{
+	       padding: 50px 30px
+	}
+	.innerText{		
+		font-size:18px;
+	}
+	
+	.queryContent {	 
+	    padding: 50px 50px;
+	}
+
+	.formFields{
+		text-align: left; 
+	}	
+	.btnLarge{
+		width:90%;
+	}
+	
+	
+}
+
+@media only screen and (max-width: 712px) {
+	.caption{
+		margin-left:0px;
+		width:215px !important;
+	}
+
+	.bgMedium{
+		width:auto;
+     	 
+	}
+	.innerText{		
+		font-size:18px;
+	}
+	.textContent{
+	       padding: 50px 30px
+	}
+
+	.queryContent {	 
+	    padding: 50px 20px;
+	}
+	
+}
+
+@media only screen and (max-width: 518px) {
+	.caption{
+		margin-left:0px;
+		width:150px !important;
+	}
+	.innerText{
+		padding-left:10px;
+		font-size:12px;
+	}
+
+	.formFields{
+		text-align: left; 
+	}	
+	.btnLarge{
+		width:90%;
+	}
+}
 
 
 
